--- a/roles/alpine/tasks/zfs-install.yaml
+++ b/roles/alpine/tasks/zfs-install.yaml
@@ -1,13 +1,13 @@
-- name: zfs-service | ensure udev
+- name: zfs | ensure udev
   include_tasks: ensure-service.yaml
   vars:
     - service_name: udev
 
 - setup:
   when: ansible_kernel is undefined
-  name: zfs-service | gather
+  name: zfs | gather
 
-- name: zfs-service | install zfs with kernal {{ ansible_kernel }}
+- name: zfs | install zfs with kernal {{ ansible_kernel }}
   become: true
   apk:
     name: "{{ item }}"
@@ -16,13 +16,13 @@
     - zfs-udev
     - "zfs-{{ ansible_kernel | regex_search('-([a-z]*?)$','\\1') | first | default('lts') }}"
 
-- name: zfs-service | load zfs module
+- name: zfs | load zfs module
   become: true
   modprobe:
     name: zfs
     state: present
 
-- name: zfs-service | persist zfs mpdule
+- name: zfs | persist zfs mpdule
   become: true
   lineinfile:
     path: /etc/modules-load.d/zfs.conf
@@ -30,7 +30,7 @@
     create: true
     mode: 0644
 
-- name: zfs-service | start zfs
+- name: zfs | start zfs
   become: true
   service:
     name: "{{ item }}"
@@ -41,7 +41,7 @@
   tags:
     - service-start
 
-- name: zfs-service | enable zfs on boot
+- name: zfs | enable zfs on boot
   become: true
   service:
     name: "{{ item }}"
